--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+		
+		<link rel="stylesheet" href="assets/css/custom-fonts.css" type="text/css" charset="utf-8" />
 	</head>
 	<body class="is-preload">
 
@@ -30,7 +32,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Our Story</h1>
+							<h1 style="font-family:middleearthmedium;">Our Story</h1>
 							<p class="major">TODO</p>
 							<ul class="actions stacked">
 								<li><a href="#unite" class="button big wide smooth-scroll-middle">Let's Unite Our Houses</a></li>
@@ -44,7 +46,7 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
-							<h2>Save The Date</h2>
+							<h2 style="font-family:half-elvenregular;">Save The Date</h2>
 							<p>TODO</p>
 							<ul class="actions stacked">
 								<li><a href="#party-business" class="button">What To Expect</a></li>
@@ -58,7 +60,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
-							<h2>An Unexpected Journey</h2>
+							<h2 style="font-family:hobbiton_brushhahobbitonbrush;">An Unexpected Journey</h2>
 							<p>TODO</p>
 							<ul class="actions stacked">
 								<li><a href="#winter" class="button">Winter Is Coming...</a></li>
@@ -72,7 +74,7 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="winter">
 						<div class="content">
-							<h2>Winter Is Coming</h2>
+							<h2 style="font-family:game_of_thronesregular;">Winter&nbsp;&nbsp;Is&nbsp;&nbsp;Coming</h2>
 							<p>TODO</p>
 						</div>
 						<div class="image">
@@ -83,7 +85,7 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
+							<h2 style="font-family:ringbearermedium;">Massa sed condimentum</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 						</div>
 
