--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 							<h1 style="font-family:middleearthmedium;">Our Story</h1>
 							<p class="major">TODO</p>
 							<ul class="actions stacked">
-								<li><a href="#unite" class="button big wide smooth-scroll-middle">Let's Unite Our Houses</a></li>
+								<li><a href="#unite" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">Let's Unite Our Houses</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -46,11 +46,8 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
-							<h2 style="font-family:half-elvenregular;">Save The Date</h2>
+							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
 							<p>TODO</p>
-							<ul class="actions stacked">
-								<li><a href="#party-business" class="button">What To Expect</a></li>
-							</ul>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
@@ -60,11 +57,8 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
-							<h2 style="font-family:hobbiton_brushhahobbitonbrush;">An Unexpected Journey</h2>
+							<h2 style="font-family:partybusiness;">An Unexpected Journey</h2>
 							<p>TODO</p>
-							<ul class="actions stacked">
-								<li><a href="#winter" class="button">Winter Is Coming...</a></li>
-							</ul>
 						</div>
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="" />
@@ -85,8 +79,8 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2 style="font-family:ringbearermedium;">Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2 style="font-family:ringbearermedium;">Your Presence is Requested</h2>
+							<p>TODO</p>
 						</div>
 
 						<!-- Gallery -->
@@ -98,9 +92,6 @@
 									<div class="caption">
 										<h3>Ipsum Dolor</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -110,9 +101,6 @@
 									<div class="caption">
 										<h3>Feugiat Lorem</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -122,9 +110,6 @@
 									<div class="caption">
 										<h3>Magna Amet</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -134,9 +119,6 @@
 									<div class="caption">
 										<h3>Sed Tempus</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -146,9 +128,6 @@
 									<div class="caption">
 										<h3>Ultrices Magna</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -158,9 +137,6 @@
 									<div class="caption">
 										<h3>Sed Tempus</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -170,9 +146,6 @@
 									<div class="caption">
 										<h3>Ipsum Lorem</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -182,9 +155,6 @@
 									<div class="caption">
 										<h3>Magna Risus</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -194,9 +164,6 @@
 									<div class="caption">
 										<h3>Tempus Dolor</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -206,9 +173,6 @@
 									<div class="caption">
 										<h3>Sed Etiam</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -218,9 +182,6 @@
 									<div class="caption">
 										<h3>Magna Lorem</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 								<article>
@@ -230,9 +191,6 @@
 									<div class="caption">
 										<h3>Ipsum Dolor</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
 									</div>
 								</article>
 							</div>
