--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
+							<h1 style="font-family:partybusiness;">no admittance - except on party business</h1>
 							<p class="major">RSVP coming soon.</p>
 						</div>
 						<div class="image">
