--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
-							<h2 style="font-family:partybusiness;">An Unexpected Journey</h2>
+							<h2 style="font-family:party_businessregular;">An Unexpected Journey</h2>
 							<p>TODO</p>
 						</div>
 						<div class="image">
