--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,7 +157,7 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		font-family: "Source Sans Pro", Helvetica, sans-serif, middleearthmedium, half-elvenregular, partybusiness, hobbiton_brushhahobbitonbrush, game_of_thronesregular, ringbearermedium;
+		font-family: "Source Sans Pro", Helvetica, sans-serif, middleearthmedium, half-elvenregular, party_businessregular, hobbiton_brushhahobbitonbrush, game_of_thronesregular, ringbearermedium;
 		font-size: 1rem;
 		font-weight: 300;
 		line-height: 1.65;
