--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 							<h1 style="font-family:middleearthmedium;">Our Story</h1>
 							<p class="major">TODO</p>
 							<ul class="actions stacked">
-								<li><a href="#unite" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">Let's Unite Our Houses</a></li>
+								<li><a href="#unite" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">Let's unite our houses!</a></li>
 							</ul>
 						</div>
 						<div class="image">
