--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -21,6 +21,8 @@
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+		
+		<link rel="stylesheet" href="assets/css/custom-fonts.css" type="text/css" charset="utf-8" />
 	</head>
 	<body class="is-preload">
 
