--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/welcome.png" alt="" />
 						</div>
 					</section>
 
@@ -50,7 +50,7 @@
 							<p>TODO</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/announcement.png" alt="" />
 						</div>
 					</section>
 
