--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,17 @@
 						<div class="content">
 							<h1 style="font-family:middleearthmedium;">Our Story</h1>
 							<p class="major">TODO</p>
+							
+							<p class="major">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vehicula sollicitudin eros quis ullamcorper. Ut varius metus id elementum sagittis. Donec tincidunt auctor commodo. In elit erat, suscipit eget tristique quis, volutpat nec purus. Aliquam aliquam ex a mi vehicula laoreet. Cras ac accumsan augue, eu rhoncus arcu. Praesent ultricies, ex eget sodales facilisis, massa nisi rutrum arcu, ut molestie sem dui non purus. Aliquam pulvinar, erat a lobortis auctor, nisi metus facilisis ligula, ac blandit sem justo auctor risus.</p>
+
+							<p class="major">Pellentesque ac tempus sem. Curabitur elit nisi, elementum fermentum scelerisque luctus, lobortis non purus. Nam rhoncus pellentesque condimentum. Sed vel ante sem. Ut nulla turpis, ultrices vitae risus et, feugiat finibus turpis. Quisque aliquam semper elit. Ut sed eros quis lectus tristique pellentesque. Maecenas euismod eget sem sed faucibus. Nullam interdum velit vitae hendrerit tincidunt. In ex dui, malesuada eget odio a, iaculis varius orci.</p>
+
+							<p class="major">Etiam felis odio, tincidunt non erat ut, pretium bibendum dui. Duis eget eleifend nibh. Integer velit risus, dignissim sit amet fermentum sed, mollis ut eros. Ut sodales metus non justo varius lobortis. Nullam ligula dui, congue eget lacinia et, porta eu neque. Pellentesque ultrices, nulla eget imperdiet lacinia, enim felis sodales ex, non lobortis dolor ipsum eu mi. Vestibulum sodales orci eros.</p>
+
+							<p class="major">Donec eu egestas quam, aliquam ornare metus. Pellentesque egestas velit quis auctor accumsan. Suspendisse et rutrum mauris. Phasellus ac dui placerat, bibendum risus ac, lobortis est. Curabitur ac ex efficitur, dapibus orci id, dignissim tortor. Nunc aliquet magna sit amet congue accumsan. Duis nec lacinia lectus, eleifend fringilla eros. Vivamus auctor neque magna, vel vehicula sapien gravida quis. Proin efficitur pharetra erat at interdum.</p>
+
+							<p class="major">Suspendisse lobortis nulla sed urna tincidunt, vel finibus lorem accumsan. In sit amet ultrices lacus. Duis pellentesque fringilla ante, in vulputate eros imperdiet non. Aliquam ornare massa id nisl semper, at dictum eros mollis. Aliquam quis ornare odio. Donec in est in eros consequat porttitor sit amet ac turpis. Sed fermentum at odio vel eleifend.</p>
+							
 							<ul class="actions stacked">
 								<li><a href="#unite" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">Let's unite our houses!</a></li>
 							</ul>
@@ -50,7 +61,7 @@
 							<p>TODO</p>
 						</div>
 						<div class="image">
-							<img src="images/announcement.png" alt="" />
+							<img src="images/hands.png" alt="" />
 						</div>
 					</section>
 
@@ -61,7 +72,7 @@
 							<p>TODO</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/announcement.png" alt="" />
 						</div>
 					</section>
 
