--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,16 +35,6 @@
 							<h1 style="font-family:middleearthmedium;">Our Story</h1>
 							<p class="major">TODO</p>
 							
-							<p class="major">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vehicula sollicitudin eros quis ullamcorper. Ut varius metus id elementum sagittis. Donec tincidunt auctor commodo. In elit erat, suscipit eget tristique quis, volutpat nec purus. Aliquam aliquam ex a mi vehicula laoreet. Cras ac accumsan augue, eu rhoncus arcu. Praesent ultricies, ex eget sodales facilisis, massa nisi rutrum arcu, ut molestie sem dui non purus. Aliquam pulvinar, erat a lobortis auctor, nisi metus facilisis ligula, ac blandit sem justo auctor risus.</p>
-
-							<p class="major">Pellentesque ac tempus sem. Curabitur elit nisi, elementum fermentum scelerisque luctus, lobortis non purus. Nam rhoncus pellentesque condimentum. Sed vel ante sem. Ut nulla turpis, ultrices vitae risus et, feugiat finibus turpis. Quisque aliquam semper elit. Ut sed eros quis lectus tristique pellentesque. Maecenas euismod eget sem sed faucibus. Nullam interdum velit vitae hendrerit tincidunt. In ex dui, malesuada eget odio a, iaculis varius orci.</p>
-
-							<p class="major">Etiam felis odio, tincidunt non erat ut, pretium bibendum dui. Duis eget eleifend nibh. Integer velit risus, dignissim sit amet fermentum sed, mollis ut eros. Ut sodales metus non justo varius lobortis. Nullam ligula dui, congue eget lacinia et, porta eu neque. Pellentesque ultrices, nulla eget imperdiet lacinia, enim felis sodales ex, non lobortis dolor ipsum eu mi. Vestibulum sodales orci eros.</p>
-
-							<p class="major">Donec eu egestas quam, aliquam ornare metus. Pellentesque egestas velit quis auctor accumsan. Suspendisse et rutrum mauris. Phasellus ac dui placerat, bibendum risus ac, lobortis est. Curabitur ac ex efficitur, dapibus orci id, dignissim tortor. Nunc aliquet magna sit amet congue accumsan. Duis nec lacinia lectus, eleifend fringilla eros. Vivamus auctor neque magna, vel vehicula sapien gravida quis. Proin efficitur pharetra erat at interdum.</p>
-
-							<p class="major">Suspendisse lobortis nulla sed urna tincidunt, vel finibus lorem accumsan. In sit amet ultrices lacus. Duis pellentesque fringilla ante, in vulputate eros imperdiet non. Aliquam ornare massa id nisl semper, at dictum eros mollis. Aliquam quis ornare odio. Donec in est in eros consequat porttitor sit amet ac turpis. Sed fermentum at odio vel eleifend.</p>
-							
 							<ul class="actions stacked">
 								<li><a href="#unite" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">Let's unite our houses!</a></li>
 							</ul>
@@ -54,18 +44,16 @@
 						</div>
 					</section>
 
-				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
-							<p>TODO</p>
+							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in Iowa City, Iowa on President's Day weekend Sunday February 14, 2021. The wedding ceremony and reception venue will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a>. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
 						</div>
 						<div class="image">
 							<img src="images/hands.png" alt="" />
 						</div>
 					</section>
 
-				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
 							<h2 style="font-family:party_businessregular;">An Unexpected Journey</h2>
@@ -76,18 +64,17 @@
 						</div>
 					</section>
 
-				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="winter">
 						<div class="content">
 							<h2 style="font-family:game_of_thronesregular;">Winter&nbsp;&nbsp;Is&nbsp;&nbsp;Coming</h2>
-							<p>TODO</p>
+							<p>Iowa winters are cold. Bring a jacket or your warmest fur. Dress attire is Hobbit Formal.</p>
+							<p>Settle down with us for a night of feasting, drinking, laughing, dancing, a toasty fire, and the loving companionship of friends and family.</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/winter.png" alt="" />
 						</div>
 					</section>
 
-				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2 style="font-family:ringbearermedium;">Your Presence is Requested</h2>
