--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
-							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in Iowa City, Iowa on President's Day weekend Sunday February 14, 2021. The wedding ceremony and reception venue will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a>. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
+							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in Iowa City, Iowa on President's Day weekend <u>Sunday February 14, 2021</u>. The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a>. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
 							<div title="Add to Calendar" class="addeventatc">
 								Add to Calendar
 								<span class="start">02/14/2021 1:00 PM</span>
@@ -55,7 +55,7 @@
 								<span class="all_day_event">true</span>
 								<span class="timezone">America/Chicago</span>
 								<span class="title">Amber and Ben Wedding</span>
-								<span class="description">Amber Aldrich and Benjamin Holland are getting married. Celebration feast afterwards!</span>
+								<span class="description">Amber Aldrich and Benjamin Holland are getting married. Celebration and feast afterwards! Venue and reception will be held at the Celebration Farm (https://www.thecelebrationfarm.com).</span>
 								<span class="location">4696 Robin Woods Ln NE, Iowa City, IA 52240</span>
 							</div>
 						</div>
