--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,6 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1 style="font-family:middleearthmedium;">Our Story</h1>
@@ -47,7 +46,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
-							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in Iowa City, Iowa on President's Day weekend <u>Sunday February 14, 2021</u>. The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a>. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
+							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on President's Day weekend <u>Sunday February 14, 2021</u>. The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a>. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
 							<div title="Add to Calendar" class="addeventatc">
 								Add to Calendar
 								<span class="start">02/14/2021 1:00 PM</span>
@@ -77,7 +76,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="winter">
 						<div class="content">
 							<h2 style="font-family:game_of_thronesregular;">Winter&nbsp;&nbsp;Is&nbsp;&nbsp;Coming</h2>
-							<p>Iowa winters are cold. Bring a jacket or your warmest fur. Dress attire is Hobbit Formal.</p>
+							<p>Iowa winters are <i>cold</i>. Bring a jacket or your warmest fur. Dress attire is Hobbit Formal.</p>
 							<p>Settle down with us for a night of feasting, drinking, laughing, dancing, a toasty fire, and the loving companionship of friends and family.</p>
 						</div>
 						<div class="image">
