--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
-							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on President's Day weekend <u>Sunday February 14, 2021</u>. The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a>. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
+							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on President's Day weekend <u>Sunday February 14, 2021</u>. The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
 							<div title="Add to Calendar" class="addeventatc">
 								Add to Calendar
 								<span class="start">02/14/2021 1:00 PM</span>
@@ -54,7 +54,7 @@
 								<span class="all_day_event">true</span>
 								<span class="timezone">America/Chicago</span>
 								<span class="title">Amber and Ben Wedding</span>
-								<span class="description">Amber Aldrich and Benjamin Holland are getting married. Celebration and feast afterwards! Venue and reception will be held at the Celebration Farm (https://www.thecelebrationfarm.com).</span>
+								<span class="description">Amber Aldrich and Benjamin Holland are getting married. Celebration and feast afterwards! Venue and reception will be held at the Celebration Farm (https://www.thecelebrationfarm.com) in the Double Round Barn.</span>
 								<span class="location">4696 Robin Woods Ln NE, Iowa City, IA 52240</span>
 							</div>
 						</div>
@@ -87,7 +87,8 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2 style="font-family:ringbearermedium;">Your Presence is Requested</h2>
-							<p>TODO</p>
+							<p>We understand that not every guest will be able join us for this special occasion. Braving an Iowa winter is not a journey for the weak hearted...</p>
+							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to stay for the evening feastivities you will be helping to start the next chapter in our story.</p>
 						</div>
 
 						<!-- Gallery -->
