--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="winter">
 						<div class="content">
 							<h2 style="font-family:game_of_thronesregular;">Winter&nbsp;&nbsp;Is&nbsp;&nbsp;Coming</h2>
-							<p>Iowa winters are <i>cold</i>. Bring a jacket or your warmest fur. Dress attire is Hobbit Formal.</p>
+							<p>Iowa winters are <i>cold</i>. Bring a jacket or your warmest fur. Dress attire is Hobbit Formal. We'll let you know when we know what that means.</p>
 							<p>Settle down with us for a night of feasting, drinking, laughing, dancing, a toasty fire, and the loving companionship of friends and family.</p>
 						</div>
 						<div class="image">
@@ -88,7 +88,8 @@
 						<div class="inner">
 							<h2 style="font-family:ringbearermedium;">Your Presence is Requested</h2>
 							<p>We understand that not every guest will be able join us for this special occasion. Braving an Iowa winter is not a journey for the weak hearted...</p>
-							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to stay for the evening feastivities you will be helping to start the next chapter in our story.</p>
+							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to stay for the after dinner feastivities you will be helping to start the next chapter in our story.</p>
+							<p>Seriously, do not bring a gift. We have to take everything back to Virgina. Cards are welcome if you absolutely feel the need.</p>
 						</div>
 
 						<!-- Gallery -->
