fixing the words

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,8 +88,8 @@
 						<div class="inner">
 							<h2 style="font-family:ringbearermedium;">Your Presence is Requested</h2>
 							<p>We understand that not every guest will be able join us for this special occasion. Braving an Iowa winter is not a journey for the weak hearted...</p>
-							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to stay for the after dinner feastivities you will be helping to start the next chapter in our story.</p>
-							<p>Seriously, do not bring a gift. We have to take everything back to Virgina. Cards are welcome if you absolutely feel the need.</p>
+							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to stay for the after-dinner festivities you will be helping to start the next chapter in our story.</p>
+							<p>Seriously, do not bring a gift. We have to take everything back to Virginia. Cards are welcome if you absolutely feel the need.</p>
 						</div>
 
 						<!-- Gallery -->
