--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -36,7 +36,7 @@
 							<p class="major">RSVP coming soon.</p>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/rsvp.png" alt="" />
 						</div>
 					</section>
 
