--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
 						<div class="content">
 							<h2 style="font-family:game_of_thronesregular;">Winter&nbsp;&nbsp;Is&nbsp;&nbsp;Coming</h2>
 							<p>Iowa winters are <i>cold</i>. Bring a jacket or your warmest fur. Dress attire is Hobbit Formal. We'll let you know when we know what that means.</p>
-							<p>Settle down with us for a night of feasting, drinking, laughing, dancing, a toasty fire, and the loving companionship of friends and family.</p>
+							<p>Settle down with us for a night of feasting, drinking, dancing, laughing, a toasty fire, and the loving companionship of friends and family.</p>
 						</div>
 						<div class="image">
 							<img src="images/winter.png" alt="" />
