--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -23,6 +23,16 @@
 		<meta name="theme-color" content="#ffffff">
 		
 		<link rel="stylesheet" href="assets/css/custom-fonts.css" type="text/css" charset="utf-8" />
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-20734269-3"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-20734269-3');
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -45,7 +55,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<!--<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:wedding@uniteourhouses.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; <a href="https://amberaldrich.com">Amber Aldrich</a> &amp; <a href="https://ben-holland.com">Benjamin Holland</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
