--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1 style="font-family:middleearthmedium;">Our Story</h1>
-							<p class="major">TODO</p>
+							<p class="major">Our story began with a weekend trip to Medieval Times in Chicago. The next chapter of our story involves you!</p>
 							
 							<ul class="actions stacked">
 								<li><a href="#unite" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">Let's unite our houses!</a></li>
@@ -223,7 +223,7 @@
 								<!--<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
 								<li><a href="mailto:wedding@uniteourhouses.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; <a href="https://amberaldrich.com">Amber Aldrich</a> &amp; <a href="https://ben-holland.com">Benjamin Holland</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; <a href="https://amberaldrich.com">Amber Aldrich</a> &amp; <a href="https://ben-holland.com">Benjamin Holland</a>. Design by <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
