--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -57,7 +57,7 @@
 								<!--<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
 								<li><a href="mailto:wedding@uniteourhouses.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; <a href="https://amberaldrich.com">Amber Aldrich</a> &amp; <a href="https://ben-holland.com">Benjamin Holland</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; <a href="https://amberaldrich.com">Amber Aldrich</a> &amp; <a href="https://ben-holland.com">Benjamin Holland</a>. Design by <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
