--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,6 +131,11 @@
 										<h3>Renfaire After Dark 2018</h3>
 										<p>Renaissance fair + camping? Yes, please.</p>
 									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/proposal_full.png" class="image">
+										<img src="images/gallery/thumbs/proposal_thumb.png" alt="" />
+									</a>
 									<div class="caption">
 										<h3>Amber said yes!</h3>
 										<p>Proposal on October 4th 2019 at Carnivalé Chicago</p>
