--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,12 +115,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/medieval_times_2018_full.png" class="image">
-										<img src="images/gallery/thumbs/medieval_times_2018_thumb.png" alt="" />
+									<a href="images/gallery/fulls/proposal_full.png" class="image">
+										<img src="images/gallery/thumbs/proposal_thumb.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Medieval Times 2018</h3>
-										<p>Ben's last Medieval Times trip as a student.</p>
+										<h3>She said yes!</h3>
+										<p>Proposal on October 4th 2019 at Carnivalé Chicago</p>
 									</div>
 								</article>
 								<article>
@@ -133,12 +133,30 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/proposal_full.png" class="image">
-										<img src="images/gallery/thumbs/proposal_thumb.png" alt="" />
+									<a href="images/gallery/fulls/medieval_times_2018_full.png" class="image">
+										<img src="images/gallery/thumbs/medieval_times_2018_thumb.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Amber said yes!</h3>
-										<p>Proposal on October 4th 2019 at Carnivalé Chicago</p>
+										<h3>Medieval Times 2018</h3>
+										<p>Ben's last Medieval Times trip as a student.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/des_moines_botanical_gardens_full.png" class="image">
+										<img src="images/gallery/thumbs/des_moines_botanical_gardens_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Des Moines Botanical Gardens</h3>
+										<p>Amber enjoying getting ideas for expensive fairy gardens.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/des_moines_botanical_gardens_full.png" class="image">
+										<img src="images/gallery/thumbs/des_moines_botanical_gardens_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Our Dogs</h3>
+										<p>Our rescue dogs, Petunia and Sebastian, each anxiously awaiting us to come back inside.</p>
 									</div>
 								</article>
 							</div>
