--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,7 +119,7 @@
 										<img src="images/gallery/thumbs/proposal_thumb.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>She said yes!</h3>
+										<h3>Amber said yes!</h3>
 										<p>Proposal on October 4th 2019 at Carnivalé Chicago</p>
 									</div>
 								</article>
@@ -129,7 +129,7 @@
 									</a>
 									<div class="caption">
 										<h3>Renfaire After Dark 2018</h3>
-										<p>Renaissance fair + camping? Yes, please.</p>
+										<p>Renaissance fair with camping? Yes, please.</p>
 									</div>
 								</article>
 								<article>
@@ -151,8 +151,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/des_moines_botanical_gardens_full.png" class="image">
-										<img src="images/gallery/thumbs/des_moines_botanical_gardens_thumb.png" alt="" />
+									<a href="images/gallery/fulls/doggies_full.png" class="image">
+										<img src="images/gallery/thumbs/doggies_thumb.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Our Dogs</h3>
