--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,6 +133,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/road_bike_utah_2015_full.png" class="image">
+										<img src="images/gallery/thumbs/road_bike_utah_2015_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Road Biking Utah 2015</h3>
+										<p>We laid under the stars on a perfectly clear night to watch them twinkle together.</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/medieval_times_2018_full.png" class="image">
 										<img src="images/gallery/thumbs/medieval_times_2018_thumb.png" alt="" />
 									</a>
@@ -147,7 +156,7 @@
 									</a>
 									<div class="caption">
 										<h3>Des Moines Botanical Gardens</h3>
-										<p>Amber enjoying getting ideas for expensive fairy gardens.</p>
+										<p>Amber getting ideas for expensive fairy gardens.</p>
 									</div>
 								</article>
 								<article>
