--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,12 +133,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/road_bike_utah_2015_full.png" class="image">
-										<img src="images/gallery/thumbs/road_bike_utah_2015_thumb.png" alt="" />
+									<a href="images/gallery/fulls/cherry_blossoms_japan_2017_full.png" class="image">
+										<img src="images/gallery/thumbs/cherry_blossoms_japan_2017_thumbs.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Road Biking Utah 2015</h3>
-										<p>We laid under the stars on a perfectly clear night to watch them twinkle together.</p>
+										<h3>Cherry Blossoms in Japan 2017</h3>
+										<p>Our first international trip together!</p>
 									</div>
 								</article>
 								<article>
@@ -151,6 +151,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/road_bike_utah_2015_full.png" class="image">
+										<img src="images/gallery/thumbs/road_bike_utah_2015_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Road Biking Utah 2015</h3>
+										<p>We laid under the stars on a perfectly clear night to watch the sky twinkle together.</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/des_moines_botanical_gardens_full.png" class="image">
 										<img src="images/gallery/thumbs/des_moines_botanical_gardens_thumb.png" alt="" />
 									</a>
@@ -160,12 +169,30 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/kayaking_florida_everglades_2015_full.png" class="image">
+										<img src="images/gallery/thumbs/kayaking_florida_everglades_2015_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Kayaking in the Florida Everglades 2015</h3>
+										<p>If the alligators don't get you the mosquitos will eat you alive.</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/doggies_full.png" class="image">
 										<img src="images/gallery/thumbs/doggies_thumb.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Our Dogs</h3>
 										<p>Our rescue dogs, Petunia and Sebastian, each anxiously awaiting us to come back inside.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/white_water_rafting_wisconsin_2015_full.png" class="image">
+										<img src="images/gallery/thumbs/white_water_rafting_wisconsin_2015_thumbs.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>White Water Rafting Wisconsin 2015</h3>
+										<p>When they hit the 12' waterfall Amber and Ben were the only two left in the boat at the bottom.</p>
 									</div>
 								</article>
 							</div>
