added cave tours

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,6 +133,24 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/amber_caving_mammoth_caves_kentucky_2014_full.png" class="image">
+										<img src="images/gallery/thumbs/amber_caving_mammoth_caves_kentucky_2014_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Amber Caving in Mammoth Caves Kentucky 2014</h3>
+										<p>Amber on the "Wild Cave Tour". A 6-hour crawling and climbing through all terrains underground.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/ben_caving_mammoth_caves_kentucky_2014_full.png" class="image">
+										<img src="images/gallery/thumbs/ben_caving_mammoth_caves_kentucky_2014_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Ben Caving in Mammoth Caves Kentucky 2014</h3>
+										<p>It was too tight to take a photo together...</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/cherry_blossoms_japan_2017_full.png" class="image">
 										<img src="images/gallery/thumbs/cherry_blossoms_japan_2017_thumb.png" alt="" />
 									</a>
