--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -138,7 +138,7 @@
 									</a>
 									<div class="caption">
 										<h3>Amber Caving in Mammoth Caves Kentucky 2014</h3>
-										<p>Amber on the "Wild Cave Tour". A 6-hour crawling and climbing through all terrains underground.</p>
+										<p>Amber on the "Wild Cave Tour". A 6-hour crawling and climbing adventure through all terrains underground.</p>
 									</div>
 								</article>
 								<article>
