reorder photos and phrasing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
-							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on President's Day weekend <u>Sunday February 14, 2021</u>. The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
+							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Sunday February 14, 2021</u> (President's Day weekend). The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
 							<div title="Add to Calendar" class="addeventatc">
 								Add to Calendar
 								<span class="start">02/14/2021 1:00 PM</span>
@@ -115,12 +115,12 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/snake_full.png" class="image">
-										<img src="images/gallery/thumbs/snake_thumb.png" alt="" />
+									<a href="images/gallery/fulls/cherry_blossoms_japan_2017_full.png" class="image">
+										<img src="images/gallery/thumbs/cherry_blossoms_japan_2017_thumb.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Iron Snake with Saphire Crown</h3>
-										<p>One of Amber's spirit animals is definitely a snake.</p>
+										<h3>Cherry Blossoms in Japan 2017</h3>
+										<p>Our first international trip together!</p>
 									</div>
 								</article>
 								<article>
@@ -130,6 +130,15 @@
 									<div class="caption">
 										<h3>Amber said yes!</h3>
 										<p>Proposal on October 4th 2019 at Carnivalé Chicago</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/snake_full.png" class="image">
+										<img src="images/gallery/thumbs/snake_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Iron Snake with Saphire Crown</h3>
+										<p>One of Amber's spirit animals is definitely a snake.</p>
 									</div>
 								</article>
 								<article>
@@ -157,15 +166,6 @@
 									<div class="caption">
 										<h3>Ben Caving in Mammoth Caves Kentucky 2014</h3>
 										<p>It was too tight to take a photo together...</p>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/cherry_blossoms_japan_2017_full.png" class="image">
-										<img src="images/gallery/thumbs/cherry_blossoms_japan_2017_thumb.png" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Cherry Blossoms in Japan 2017</h3>
-										<p>Our first international trip together!</p>
 									</div>
 								</article>
 								<article>
