added small detail

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,6 +130,7 @@
 									<div class="caption">
 										<h3>Amber said yes!</h3>
 										<p>Proposal on October 4th 2019 at Carnivalé Chicago</p>
+										<p>It only took Ben 1918 days to propose!</p>
 									</div>
 								</article>
 								<article>
